--- a/translations/text.fi.yaml
+++ b/translations/text.fi.yaml
@@ -13,3 +13,18 @@ SearchInputPlaceholder: "Hae tuotteista"
 ReCaptchaPrivacy: "Tämä sivusto on suojattu reCAPTCHA:lla ja siihen sovelletaan Googlen <a href='https://policies.google.com/privacy' target='_blank'>Tietosuojakäytäntöä</a>, ja <a href='https://policies.google.com/terms' target='_blank'>Palveluehtoja</a>."
 Required: "Vaadittu"
 Optional: "Valinnainen"
+
+
+URL:
+  TermsAndConditions: toimitusehdot
+  ContactUs: ota-yhteytta
+  Instructions: kayttoohjeet
+  PrivacyPolicy: rekisteriseloste
+  CookiePolicy: evastekaytanto
+  Links: linkkeja
+
+GoogleTagManager: GTM-WZ45B8G
+
+NewRelic: newrelic-browser-sopimusmallit.js
+
+ShopUrl: https://www.sopimusmallit.com
